--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
                 <div class="gift__options">
                     <div class="gift__item">
                         <div class="gift__image gift1"></div>
-                        <div class="gift__occasion">Birthday</div>
-                        <div class="gift__more"><a href="">See More ›</a></div>
+                        <div class="gift__desc">
+                            <div class="gift__occasion">Birthday</div>
+                            <div class="gift__more"><a href="">See More ›</a></div>
+                        </div>
                     </div>
                     <div class="gift__item">
                         <div class="gift__image gift2"></div>
@@ -109,14 +111,18 @@
                     </div>
                     <div class="blog__list">
                         <div class="article">
-                            <div class="article_name">Database to find the gifts for your girlfriend</div>
-                            <div class="article_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</div>
-                            <div class="article_more">Read More</div>
+                            <div class="wrapper">
+                                <div class="article_name">Database to find the gifts for your girlfriend</div>
+                                <div class="article_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</div>
+                                <div class="article_more">Read More</div>
+                            </div>
                         </div>
                         <div class="article">
-                            <div class="article_name">How Artificial Intelligence read your mind to find the best gift</div>
-                            <div class="article_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</div>
-                            <div class="article_more">Read More</div>
+                            <div class="wrapper">
+                                <div class="article_name">How Artificial Intelligence read your mind to find the best gift</div>
+                                <div class="article_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</div>
+                                <div class="article_more">Read More</div>
+                            </div>
                         </div>
                     </div>
             </div>
