--- a/index.html
+++ b/index.html
@@ -65,18 +65,24 @@
                     </div>
                     <div class="gift__item">
                         <div class="gift__image gift2"></div>
-                        <div class="gift__occasion">Anniversary</div>
-                        <div class="gift__more"><a href="">See More ›</a></div>
+                        <div class="gift__desc">
+                            <div class="gift__occasion">Anniversary</div>
+                            <div class="gift__more"><a href="">See More ›</a></div>
+                        </div>
                     </div>
                     <div class="gift__item">
-                        <div class="gift__image gift3"></div>
-                        <div class="gift__occasion">Valentine's Day</div>
-                        <div class="gift__more"><a href="">See More ›</a></div>
+                        <div class="gift__desc">
+                            <div class="gift__image gift3"></div>
+                            <div class="gift__occasion">Valentine's Day</div>
+                            <div class="gift__more"><a href="">See More ›</a></div>
+                        </div>
                     </div>
                     <div class="gift__item">
-                        <div class="gift__image gift4"></div>
-                        <div class="gift__occasion">Christmas</div>
-                        <div class="gift__more"><a href="">See More ›</a></div>
+                        <div class="gift__desc">
+                            <div class="gift__image gift4"></div>
+                            <div class="gift__occasion">Christmas</div>
+                            <div class="gift__more"><a href="">See More ›</a></div>
+                        </div>
                     </div>
             </div>
             
