--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                     <div class="line line3"></div>
                 </div>
                 <div class="header__item">
-                    <a href="" class="logo">logo</a>
+                    <a href="#" class="logo">logo</a>
                 </div>
                 <div class="header__item header__nav">
                     <ul class="nav">
-                        <li class="nav__item"><a href="" class="nav__link">Home</a></li>
-                        <li class="nav__item"><a href="" class="nav__link">About Us</a></li>
-                        <li class="nav__item"><a href="" class="nav__link">Services</a></li>
-                        <li class="nav__item"><a href="" class="nav__link">Blogs</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">About Us</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Services</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Blogs</a></li>
                     </ul>
                 </div>
                 <div class="header__item">
@@ -65,29 +65,29 @@
                     <div class="gift__item">
                         <div class="gift__image gift1"></div>
                         <div class="gift__desc">
-                            <div class="gift__occasion">Birthday</div>
-                            <div class="gift__more"><a href="">See More ›</a></div>
+                            <div class="gift__occasion"><a href="#">Birthday</a></div>
+                            <div class="gift__more"><a href="#">See More ›</a></div>
                         </div>
                     </div>
                     <div class="gift__item">
                         <div class="gift__image gift2"></div>
                         <div class="gift__desc">
-                            <div class="gift__occasion">Anniversary</div>
-                            <div class="gift__more"><a href="">See More ›</a></div>
+                            <div class="gift__occasion"><a href="#">Anniversary</a></div>
+                            <div class="gift__more"><a href="#">See More ›</a></div>
                         </div>
                     </div>
                     <div class="gift__item">
                         <div class="gift__image gift3"></div>
                         <div class="gift__desc">
-                            <div class="gift__occasion">Valentine's Day</div>
-                            <div class="gift__more"><a href="">See More ›</a></div>
+                            <div class="gift__occasion"><a href="#">Valentine's Day</a></div>
+                            <div class="gift__more"><a href="#">See More ›</a></div>
                         </div>
                     </div>
                     <div class="gift__item">
                         <div class="gift__image gift4"></div>
                         <div class="gift__desc">
-                            <div class="gift__occasion">Christmas</div>
-                            <div class="gift__more"><a href="">See More ›</a></div>
+                            <div class="gift__occasion"><a href="#">Christmas</a></div>
+                            <div class="gift__more"><a href="#">See More ›</a></div>
                         </div>
                     </div>
             </div>
@@ -116,7 +116,7 @@
                             <div class="wrapper">
                                 <div class="blog__title_name">Mr. John Doe</div>
                             <div class="blog__title_desc">The best way to wish your wife</div>
-                            <div class="blog__title_more"><a href="">Read More</a></div>
+                            <div class="blog__title_more"><a href="#">Read More</a></div>
                             </div>
                             
                         </div>
@@ -126,14 +126,14 @@
                             <div class="wrapper">
                                 <div class="article_name">Database to find the gifts for your girlfriend</div>
                                 <div class="article_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</div>
-                                <div class="article_more">Read More</div>
+                                <div class="article_more"><a href="#">Read More</a></div>
                             </div>
                         </div>
                         <div class="article">
                             <div class="wrapper">
                                 <div class="article_name">How Artificial Intelligence read your mind to find the best gift</div>
                                 <div class="article_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</div>
-                                <div class="article_more">Read More</div>
+                                <div class="article_more"><a href="#">Read More</a></div>
                             </div>
                         </div>
                     </div>
@@ -144,22 +144,22 @@
             <div class="wrapper">
                 <div class="footer__item">
                     <ul class="nav">
-                        <li class="nav__item"><a href="" class="nav__link">Home</a></li>
-                        <li class="nav__item"><a href="" class="nav__link">About Us</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+                        <li class="nav__item"><a href="#" class="nav__link">About Us</a></li>
                     </ul>
-                <a href=""><div class="logo footer__logo">logo</div></a>
+                <a href="#"><div class="logo footer__logo">logo</div></a>
                 <ul class="nav">
-                    <li class="nav__item"><a href="" class="nav__link">Services</a></li>
-                    <li class="nav__item"><a href="" class="nav__link">Blogs</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Services</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Blogs</a></li>
                 </ul>
             </div>
             <div class="hr"></div>
             <div class="footer__item">
-                <div class="footer__icon"><a href="" class="fb"></a></div>
-                <div class="footer__icon"><a href="" class="tw"></a></div>
-                <div class="footer__icon"><a href="" class="inst"></a></div>
-                <div class="footer__icon"><a href="" class="yt"></a></div>
-                <div class="footer__icon"><a href="" class="pint"></a></div>
+                <div class="footer__icon"><a href="#" class="fb"></a></div>
+                <div class="footer__icon"><a href="#" class="tw"></a></div>
+                <div class="footer__icon"><a href="#" class="inst"></a></div>
+                <div class="footer__icon"><a href="#" class="yt"></a></div>
+                <div class="footer__icon"><a href="#" class="pint"></a></div>
             </div>
             <div class="footer__item">
                 <div class="footer__term-year">© 2010 — 2020</div>
@@ -170,12 +170,12 @@
     </div>
     <div class="nav-bar">
         <ul class="nav-list">
-            <li class="nav-list-item"><a href="" class="nav-link">Home</a></li>
-            <li class="nav-list-item"><a href="" class="nav-link">About us</a></li>
+            <li class="nav-list-item"><a href="#" class="nav-link">Home</a></li>
+            <li class="nav-list-item"><a href="#" class="nav-link">About us</a></li>
             <li class="nav-list-item">
-                <a href="" class="nav-link">Services</a>
+                <a href="#" class="nav-link">Services</a>
             </li>
-            <li class="nav-list-item"><a href="" class="nav-link">Blogs</a></li>
+            <li class="nav-list-item"><a href="#" class="nav-link">Blogs</a></li>
         </ul>
     </div>
     <script>
